ajusts project struct, impl address endpoint
