# internal/models/address_model.go
@@ -3,12 +3,16 @@ package models
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type Address struct {
-	ID          primitive.ObjectID `bson:"_id,omitempty"`
-	Logradouro  string             `bson:"logradouro"`
-	Numero      int                `bson:"numero"`
-	Bairro      string             `bson:"bairro"`
-	Cidade      string             `bson:"cidade"`
-	Estado      string             `bson:"estado"`
-	CEP         string             `bson:"cep"`
-	MainAddress bool               `bson:"main_address"`
+	ID           primitive.ObjectID `bson:"_id,omitempty"`
+	Street       string             `bson:"street"`
+	Number       string             `bson:"number"`
+	Complement   string             `bson:"complement"`
+	Neighborhood string             `bson:"neighborhood"`
+	City         string             `bson:"city"`
+	State        string             `bson:"state"`
+	Country      string             `bson:"country"`
+	ZipCode      string             `bson:"zip_code"`
+	MainAddress  bool               `bson:"main_address, default:false"`
 }
+
+
