# internal/server/routes.go
@@ -1,14 +1,12 @@
 package server
 
 import (
-	"eccom-mongo/internal/controller"
-	"eccom-mongo/internal/database"
 	"eccom-mongo/internal/middleware"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 
-	docs "eccom-mongo/cmd/api/docs"
+	docs "eccom-mongo/docs"
 
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -19,17 +17,16 @@ func (s *Server) RegisterRoutes() http.Handler {
 
 	docs.SwaggerInfo.BasePath = "/"
 
-	userController := controller.NewUserController(database.NewUserDAO(s.db.GetDB()))
-	healthController := controller.NewHealthController(&s.db)
-
 	// Public routes
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-	r.GET("/health", healthController.HealthHandler)
-	r.POST("/user", userController.CreateUser)
-	r.POST("/user/login", userController.LoginUser)
+	r.GET("/health", s.healthCtrl.HealthHandler)
+	r.POST("/user", s.userCtrl.CreateUser)
+	r.POST("/user/login", s.userCtrl.LoginUser)
 
 	// Private routes
-	r.Use(middleware.NewAuthenticationMiddleware(database.NewUserDAO(s.db.GetDB())).Authenticate)
+	r.Use(middleware.NewAuthenticationMiddleware(s.userDAO).Authenticate)
+
+	r.POST("/address", s.addressCtrl.CreateAddress)
 
 	return r
 }
